Bug 289473 - Removing tiles is very slow in version 1.8.3
Summary: Removing tiles is very slow in version 1.8.3
Status: RESOLVED FIXED
Alias: None
Product: kshisen
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Frederik Schwarzer
URL:
Keywords:
: 299016 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-21 02:55 UTC by Patrick
Modified: 2012-08-07 08:46 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2011-12-21 02:55:45 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

Removing tiles is very slow in version 1.8.3 even when setting the game speed to maximum. I see this behaviour in i686 and x86_64 builds.

Reproducible: Didn't try

Steps to Reproduce:
Play the game

Actual Results:  
Removing tiles is very slow

Expected Results:  
Was much faster in previous version
Comment 1 Christoph Feck 2011-12-23 17:23:59 UTC
Can you confirm that disabling "Play Sounds" in the settings menu makes the program fast again?
Comment 2 Patrick 2011-12-24 20:07:38 UTC
In reply to comment #1
Affirmative!
Comment 3 Frederik Schwarzer 2012-02-23 20:04:22 UTC
I ported KShisen to KgSound now.
http://websvn.kde.org/?view=revision&revision=1281910

This should make things better. As KgSound will initially be available in 4.9, so will this change.
Comment 4 Frederik Schwarzer 2012-02-23 20:14:02 UTC
SVN commit 1281913 by schwarzer:

Port from Phonon to KgSound.

Phonon introduces lagging sounds depending on the backend used and
therefor is not a reliable audio layer to be used in games.

FIXED-IN: 4.9

 M  +6 -20     board.cpp  
 M  +5 -7      board.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1281913
Comment 5 Frederik Schwarzer 2012-04-29 18:52:46 UTC
*** Bug 299016 has been marked as a duplicate of this bug. ***
Comment 6 jacksaffen 2012-08-07 08:46:21 UTC
Still appears in Kubuntu 12.04 using KDE 4.8.90, Kshisen 1.8+ #13
Sound is turned off  in Shisen sho settings.