Port from Phonon to KgSound.

Phonon introduces lagging sounds depending on the backend used and
therefor is not a reliable audio layer to be used in games.

BUG: 289473
FIXED-IN: 4.9

svn path=/trunk/KDE/kdegames/kshisen/; revision=1281913